@@ -34,6 +34,7 @@ defaultParams           =
 templateEngine          = flexy
 wysiwyg_editor          = fck ;Available: htmlarea, xinha, fck
 extendedLocale          = false
+localeCategory          = 'LC_ALL'
 
 [cache]
 ; enable file caching of navigation and blocks
