@@ -290,6 +290,19 @@
     </tr>
 
     <tr>
+        <td class="fieldName">{translate(#Locale category#)}</td>
+        <td class="fieldValue">
+            <input type="text" name="conf[site][localeCategory]" value="{conf[site][localeCategory]}" size="50" />
+        </td>
+        <td>
+            <span class="tipOwner">
+                <img src="{webRoot}/themes/{theme}/images/info.gif" alt="" />
+                <span class="tipText">{translate(#locale support info#)}</span>
+            </span>
+        </td>
+    </tr>
+
+    <tr>
         <td colspan="3" align="center">&nbsp;</td>
     </tr>
     <tr>
