@@ -7,6 +7,9 @@ BUGFIXES
 24-11-05    Fixed long-standing image preview header probs
 
 IMPROVEMENTS
+14-12-05    'localeCategory' configurable, set to LC_ALL by default although European
+            users will want to change this where supplying a , for the decimal separator
+            causes calculation probs (use LC_TIME)
 14-12-05    Integrated advanced locale features available via SGL_Locale, disabled
             by default
 14-12-05    SGL_USR_OS renamed more correctly to SGL_CLIENT_OS
